# Spick

./: .gitignore  .prettierignore  README.md  THIRD_PARTY_NOTICES.md  eslint.config.js  index.html  package-lock.json  package.json  vitest.config.ts  vitest.setup.ts
.cargo/: config.toml
docs/: architecture.md  input-method.md  macos-hud.md  milestones.md
fixtures/input-method/: browser-controls.html
macos-input-method/: Info.plist
macos-input-method/Sources/: SpickInputController.h  SpickInputController.m  SpickInputSourceInspection.h  SpickInputSourceInspection.m  SpickInputSourceTool.m  SpickPeerIdentity.h  SpickPeerIdentity.m  SpickWireProtocol.h  SpickWireProtocol.m  main.m
scripts/: build-input-method-desktop.sh  build-input-method.sh  build-macos.sh  check-input-method.sh  install-input-method.sh  preflight-input-method-compatibility.sh  run-input-method-compatibility.sh
scripts/lib/: input-method-signing.sh
src/: App.css  App.nativeSettings.test.tsx  App.test.tsx  App.tsx  main.tsx  types.ts  vite-env.d.ts
src-tauri/: Cargo.toml  Info.plist  build.rs  tauri.conf.json  tauri.macos.conf.json
src-tauri/capabilities/: default.json  hud.json
src-tauri/icons/: icon.icns
src-tauri/src/: audio.rs  cloud.rs  commands.rs  compatibility.rs  domain.rs  hud.rs  latency.rs  lib.rs  local_data.rs  main.rs  microphone_permission.rs  model_store.rs  notes.rs  platform.rs  session.rs  shortcut.rs  state.rs
src-tauri/src/engines/: capabilities.rs  languages.rs  mod.rs  models.rs  providers.rs  routing.rs  types.rs  whisper_cpp.rs
src-tauri/src/platform/: input_method_protocol.rs  macos.rs
src-tauri/src/shortcut/: gesture.rs  macos_option.rs
src/components/: DictationHud.test.tsx  DictationHud.tsx  Onboarding.test.tsx  Onboarding.tsx  Sidebar.test.tsx  Sidebar.tsx  TopBar.test.tsx  TopBar.tsx  Ui.tsx
src/data/: mockData.ts
src/hooks/: useAccessibilityPermission.ts  useAudioLevel.ts  useCloudProviders.test.tsx  useCloudProviders.ts  useDictationController.test.tsx  useDictationController.ts  useHudWindow.test.tsx  useHudWindow.ts  useLocalData.test.tsx  useLocalData.ts  useMicrophonePermission.test.tsx  useMicrophonePermission.ts  useShortcutStatus.test.tsx  useShortcutStatus.ts
src/lib/: localDataPresentation.ts  nativeAccessibility.test.ts  nativeAccessibility.ts  nativeAudio.test.ts  nativeAudio.ts  nativeCloud.test.ts  nativeCloud.ts  nativeDictation.test.ts  nativeDictation.ts  nativeHud.test.ts  nativeHud.ts  nativeLocalData.test.ts  nativeLocalData.ts  nativeMicrophone.test.ts  nativeMicrophone.ts  nativeModels.test.ts  nativeModels.ts  nativeNotes.test.ts  nativeNotes.ts  nativeSettings.test.ts  nativeSettings.ts  nativeShortcut.test.ts  nativeShortcut.ts  shortcutCapture.test.ts  shortcutCapture.ts
src/views/: EnginesView.test.tsx  EnginesView.tsx  NotesView.tsx  SettingsView.test.tsx  SettingsView.tsx  TodayView.test.tsx  TodayView.tsx  VocabularyView.test.tsx  VocabularyView.tsx
website/: README.md
website/.openai/: hosting.json
website/app/: globals.css  layout.tsx  page.tsx
website/tests/: rendered-html.test.mjs
