[package]
name = "spick-desktop"
version = "0.1.0"
description = "A macOS-first foundation for fast, multilingual desktop dictation."
authors = ["Spick contributors"]
edition = "2021"

[features]
default = []
# The helper is buildable and testable, but release enablement still requires
# a measured application matrix.
macos-input-method-prototype = ["dep:objc2"]
# Never ship this feature. It permits same-user, ad-hoc development bundles
# after the secure signed-peer check fails.
macos-input-method-unsafe-dev-peers = ["macos-input-method-prototype"]
# A diagnostic-only app mode for measuring the guarded insertion primitive in
# real controls. It accepts only checked-in cases and compiled fixture text.
macos-input-method-compatibility-harness = [
  "macos-input-method-prototype",
  "dep:objc2-foundation",
]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
# The `_lib` suffix may seem redundant but it is necessary
# to make the lib name unique and wouldn't conflict with the bin name.
# This seems to be only an issue on Windows, see https://github.com/rust-lang/cargo/issues/8519
name = "spick_desktop_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
cc = "1"
tauri-build = { version = "2", features = [] }

[dependencies]
base64 = "0.22.1"
chrono = { version = "0.4.42", default-features = false, features = ["clock", "std"] }
cpal = "0.18.1"
keyring = "4.1.5"
rusqlite = { version = "0.40.1", default-features = false, features = ["bundled"] }
sha2 = "0.10.9"
tempfile = "3.27"
tauri = { version = "2", features = ["macos-private-api"] }
tauri-plugin-global-shortcut = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
unicode-segmentation = "1.13.3"
ureq = { version = "3.3.0", default-features = false, features = ["rustls"] }
uuid = { version = "1.18.1", features = ["v4"] }
zeroize = "1.8.2"

[target.'cfg(target_os = "macos")'.dependencies]
core-foundation = "0.10.1"
core-graphics = { version = "0.25.0", features = ["elcapitan"] }
libc = "0.2"
# Tauri does not expose NSPanel construction. Keep this development-only
# integration pinned because the community plugin changes the native window's
# Objective-C class at runtime; upgrades require focused macOS regression tests.
tauri-nspanel = { git = "https://github.com/ahkohd/tauri-nspanel", rev = "a3122e894383aa068ec5365a42994e3ac94ba1b6" }
objc2 = { version = "0.6.4", optional = true }
objc2-app-kit = { version = "0.3.2", default-features = false, features = ["std", "libc", "NSRunningApplication", "NSWorkspace"] }
objc2-application-services = { version = "0.3.2", default-features = false, features = ["std", "libc", "AXError", "AXUIElement", "AXValue", "HIServices"] }
objc2-core-foundation = { version = "0.3.2", default-features = false, features = ["std", "CFArray", "CFDate", "CFDictionary", "CFNumber", "CFRunLoop", "CFString"] }
objc2-foundation = { version = "0.3.2", optional = true, default-features = false, features = ["std", "NSArray", "NSString", "NSURL"] }
whisper-rs = { version = "0.16.0", features = ["metal"] }

[target.'cfg(not(target_os = "macos"))'.dependencies]
whisper-rs = "0.16.0"

[target.'cfg(any(target_os = "macos", windows, target_os = "linux"))'.dependencies]
tauri-plugin-single-instance = "2"
